[gd_scene load_steps=5 format=3 uid="uid://dgjky7pnhv5h4"]

[ext_resource type="Script" path="res://src/world/PuzzlePieces/Canons/CanonUp/canon_up.gd" id="1_hdey1"]
[ext_resource type="PackedScene" uid="uid://b68wbgn23auq6" path="res://src/world/PuzzlePieces/Canons/CanonUp/Model/cannon_up_model.tscn" id="1_l0br5"]
[ext_resource type="PackedScene" uid="uid://dr5pw4okii6t6" path="res://src/world/PuzzlePieces/Canons/Projectile/canon_projectile.tscn" id="2_6tjld"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jxmow"]
height = 1.7
radius = 1.5

[node name="CanonUp" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_hdey1")
projectile = ExtResource("2_6tjld")
projectile_distance = 3
transition_speed = 0.0
fall_speed = 0.0

[node name="CannonUpModel" parent="." instance=ExtResource("1_l0br5")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CylinderShape3D_jxmow")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SpawnPoint" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.22143, 0)

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true

[connection signal="shoot" from="CannonUpModel" to="." method="_on_cannon_up_model_shoot"]
